# django-rest-api-untangler

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
django_rest_api_untangling/: main.py
django_rest_api_untangling/src/: LoggerHelper.py  StatusMsg.py  api_client.py  django_rest_api_untangler.py  enums.py  query_objects.py  update_object_in_database.py
docs/: README.md  enums.py  technical_task.py  technical_task_REFACTORED.py
